newspaper table apis done
